Minor fix to twitter script

--- a/web/v2/index.html
+++ b/web/v2/index.html
@@ -69,7 +69,7 @@ espacios específicos para cada proceso así como otras muchas funciones.</p>
                                     tweets: {
                                         background: '#ffffff',
                                         color: '#000000',
-                                        links: '#4aed05'
+                                        links: '#226D42'
                                     }
                                 },
                                 features: {
